# STM32F103_ICM20948_I2C_DMA

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  ICM_20948_I2C_DMA.ioc
Core/Inc/: main.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h
Core/Src/: gpio.c  i2c.c  main.c  stm32f1xx_it.c
cmake/: st-project.cmake
src/: main.c
src/app/: app.c  app.h
src/app/isr/: isr.c  isr.h
src/hw/: hw.c  hw.h
src/hw/bsp/: bsp.c  bsp.h
src/hw/driver/: driver.c  icm20948.c  uart.c
src/hw/driver/inc/: driver.h  icm20948.h  uart.h
src/hw/driver/prv/: ak09916_registers.h  icm20948_registers.h
